# NUMO-Roku-Portal-v2

./: .gitignore  .npmrc  README.md  package-lock.json  package.json  pnpm-workspace.yaml
desktop/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
desktop/src/components/: ActivityLog.tsx  AppsView.tsx  DevicesView.tsx  RokuDeviceCard.tsx  SettingsView.tsx  Sidebar.tsx  TopNav.tsx
desktop/src/lib/: roku.ts
roku/: README.md  manifest
roku/components/: NUMOScene.brs  NUMOScene.xml  StreamTask.brs  StreamTask.xml  cubit.brs  rubic.brs
roku/source/: main.brs
server/: README.md  package-lock.json  package.json  tsconfig.json
server/src/: index.ts
server/src/ai/: agentZero.ts  ollama.ts
server/src/navigation/: dpad.ts  numo.ts  pas.ts
server/src/semantic/: cdp.ts  manifold.ts
server/src/sync/: cubit.ts  rubic.ts
