[package]
name = "numo-portal"
version = "2.0.0"
description = "NUMO Roku Portal - Semantic Streaming for Roku Devices"
authors = ["Lumen Helix Solutions"]
license = "MIT"
edition = "2021"
rust-version = "1.60"
default-run = "numo-portal"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0" }

[dev-dependencies]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
